Including allocation process and dates

--- a/allocation_strategies.ipynb
+++ b/allocation_strategies.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "[4566 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,25 +275,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "class AllocationManager:\n",
     "    def __init__(self):\n",
-    "        self.start_date = None  # Date where allocation starts\n",
+    "        self.start_date = self.df.index.min()  # Date where allocation starts (default = first date)\n",
     "        self.periodicity = 'D'  # 'D', 'W', 'M', 'Y'\n",
-    "        self.allocation_period = 30  # Assume allocation happens during 30 periods\n",
+    "        self.allocation_periods = 30  # Assume allocation happens during 30 periods\n",
     "        self.upfront_percent = 0  # [0 - 1]: amount to be allocated upfront\n",
     "        self.capital = 100000  # 10,000 dollars to allocate\n",
-    "        self.btc_df = None  # Bitcoin Prices Dataframe \n",
-    "    \n",
+    "        self.df = df  # Bitcoin Prices Dataframe\n",
+    "        # Create empty allocation & position columns\n",
+    "        self.df['allocation'] = 0\n",
+    "        self.df['BTC_position'] = 0\n",
+    "         \n",
     "    def allocate_capital(self):\n",
     "        # Updates the dataframe to allocate the capital\n",
-    "        pass\n",
+    "        available_capital = self.capital \n",
+    "        current_date = self.start_date\n",
+    "        periods_left = self.allocation_periods\n",
+    "        \n",
+    "        # Set upfront amount if any & per period amounts\n",
+    "        if self.upfront_percent > 0:\n",
+    "            upfront = self.upfront_percent * self.capital  # how much upfront in $\n",
+    "            per_period = (self.capital - upfront) / (self.allocation_periods - 1)\n",
+    "        else:\n",
+    "            per_period = self.capital / self.allocation_periods \n",
+    "            upfront = per_period\n",
+    "        \n",
+    "        # Start looping until allocation is complete\n",
+    "        while periods_left > 0:\n",
+    "            # If first allocation, check if there's an upfront (lumpsum = 1)\n",
+    "            if current_date == self.start_date:\n",
+    "                period_capital = upfront    \n",
+    "            else:\n",
+    "                period_capital = per_period\n",
+    "            \n",
+    "                periods_left -= 1\n",
+    "                \n",
+    "            self.df.at[current_date, 'allocation'] =     \n",
+    "        \n",
     "        \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "btc_alloc = AllocationManager()\n",
+    "btc_alloc.allocate_capital()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2010-07-17 00:00:00')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "btc_alloc.start_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
