--- a/Swan - Classic Mean Risk Optimization.ipynb
+++ b/Swan - Classic Mean Risk Optimization.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tutorial 1: Classic Mean Risk Optimization\n",
+    "## Classic Mean Risk Optimization\n",
     "\n",
     "## 1. Downloading the data:"
    ]
